--- a/tone_slider/toneslider.ui
+++ b/tone_slider/toneslider.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>800</width>
-    <height>600</height>
+    <height>79</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -16,8 +16,8 @@
   <widget class="QSlider" name="horizontalSlider">
    <property name="geometry">
     <rect>
-     <x>169</x>
-     <y>270</y>
+     <x>100</x>
+     <y>30</y>
      <width>481</width>
      <height>22</height>
     </rect>
@@ -29,8 +29,8 @@
   <widget class="QPushButton" name="startButton">
    <property name="geometry">
     <rect>
-     <x>330</x>
-     <y>330</y>
+     <x>610</x>
+     <y>30</y>
      <width>75</width>
      <height>24</height>
     </rect>
@@ -42,8 +42,8 @@
   <widget class="QPushButton" name="stopButton">
    <property name="geometry">
     <rect>
-     <x>430</x>
-     <y>330</y>
+     <x>700</x>
+     <y>30</y>
      <width>75</width>
      <height>24</height>
     </rect>
@@ -52,11 +52,34 @@
     <string>STOP</string>
    </property>
   </widget>
-  <widget class="QLabel" name="label">
+  <widget class="QLineEdit" name="lineEdit">
    <property name="geometry">
     <rect>
-     <x>400</x>
-     <y>220</y>
+     <x>20</x>
+     <y>30</y>
+     <width>61</width>
+     <height>22</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLabel" name="minFreqLabel">
+   <property name="geometry">
+    <rect>
+     <x>80</x>
+     <y>10</y>
+     <width>49</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>TextLabel</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="maxFreqLabel">
+   <property name="geometry">
+    <rect>
+     <x>560</x>
+     <y>10</y>
      <width>49</width>
      <height>16</height>
     </rect>
