--- a/instrument_mixer/mainwindow.ui
+++ b/instrument_mixer/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>792</width>
-    <height>734</height>
+    <width>789</width>
+    <height>949</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -35,13 +35,13 @@
      </item>
     </layout>
    </widget>
-   <widget class="Spectrogram" name="openGLWidget">
+   <widget class="Spectrogram" name="spectrogram">
     <property name="geometry">
      <rect>
-      <x>260</x>
+      <x>140</x>
       <y>420</y>
-      <width>261</width>
-      <height>261</height>
+      <width>471</width>
+      <height>471</height>
      </rect>
     </property>
    </widget>
@@ -51,7 +51,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>792</width>
+     <width>789</width>
      <height>22</height>
     </rect>
    </property>
